# TOF3.0

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md
acquisition/: CMakeLists.txt  depth_proto.h  peak_detect.h  sim_pf32.cpp
cloud/ml/: README.md
cloud/server/: main.py  models.py
data/depth_samples/: 20260603_222536_TOF2_frame01.tch  20260603_222536_TOF2_frame02.tch  20260603_222536_TOF2_frame03.tch  20260603_222536_TOF2_frame04.tch  20260603_222536_TOF2_frame05.tch  20260603_222830_TOF3_frame01.tch  20260603_222830_TOF3_frame02.tch  20260603_222830_TOF3_frame03.tch  20260603_222830_TOF3_frame04.tch  20260603_222830_TOF3_frame05.tch  20260603_223209_TOF4_frame01.tch  20260603_223209_TOF4_frame02.tch  20260603_223209_TOF4_frame03.tch  20260603_223209_TOF4_frame04.tch  20260603_223209_TOF4_frame05.tch
deploy/: build_qt.py  check_rk_display_env.py  check_rk_display_env2.py  check_rk_scripts.py  check_weston_client.py  diag_nezha_spi.py  diag_nezha_spi2.py  diagnose_qt_display.py  e2e_test.py  fix_crlf.py  fix_display_decoupled.py  read_qt_log.py  restart_all.py  run_qt_nobuffer.py  setup_pf32_runtime.sh  setup_spidev.sh  spi_e2e_test.py  status.py  step1_nezha_spi.py  step2_rk_autostart.py  step3_rk_start_services.py  step4_rk_reboot.py  upload_cloud.py  upload_md.py  upload_qt.py
docs/: active_modulation_literature_download_worklog.md  active_modulation_separation_algorithm.md  algorithm_code_architecture.md  algorithm_pf32_prep_plan.md  algorithm_research_roadmap.md  algorithm_test_plan.md  board_custom_uart_mapping.md  cloud_syncer_plan.md  cross_compile_qt_display.md  dl_depth_estimation_plan.md  p_rt_10fps_and_watchdog_plan.md  pf32_x86_tof_algorithm_deployment.md  realtime_display_plan.md  research_code_style.md  rk3568_connection.md  rk3568_framework.md  rk3568_reintegration_architecture.md  spi硬件接口.md  开发环境.md  登录方式.md
docs/agent-work/: progress.md
docs/文献/: 01_025022_1_online.md  03_2017.11-ScientificReports-南京大学-测量海况的演示雾采用基于SNSPD的激光雷达系统_translated.md  04_2019.5-SSPD-赫瑞瓦特大学-多时空或多光谱的联合重建单曲-光子3D_激光雷达图像.md  07_2020.11-SPIE会议论文-澳大利亚-利用统计混合模型减少雾霾环境SPAD图像中的噪声_translated.md  09_2022.5-IEEE-赫瑞瓦特大学-多光谱的稳健贝叶斯重建单曲-光子非均匀背景的3D_LIDAR数据_translated.md  10_2025.12-OpticsExpress-火箭军工程大学-基于密度聚类引导高斯模型拟合的单光子去雾成像方法_translated(1).md  11_A_Sampling-Based_Pulsewidth-Compensated_Timing_Method_Independent_of_Distance_and_Reflecti.md  13_An_analytical_model_from_physical_parameters_to_minimum_ranging_time_for.md  14_Asynchronous_Depth_Sensing_through_Direct.md  15_High-speed_3D-imaging_based_on_a_range-gated_and_large_SPAD_array.md  17_Multi-Scale_Histogram-Based_Probabilistic_Deep_Neural_Network_for_Super-Resolution_3D_LiDA.md  19_sensors-18-04338-v2.md  20_Simulation_of_LiDAR_Under_Fog_with_Generative_Adversarial_Networks_for_Robust_3D_Object_De.md  21_Single-photon_avalanche_diode_imaging_sensor_for.md  24_基于距离选通和大型单光子雪崩二极管阵列激光雷达系统的高速三维成像.md  25_用于卫星激光测距的紧凑型单光子激光雷达.md  26_用于超分辨率3D激光雷达成像的基于多尺度直方图的概率深度神经网络.md  sp_lidar_fog_papers_summary.md
ml/data/: tof_dataset.py
ml/infer/: __init__.py
ml/tests/: test_ml_scaffold.py
ml_offline/infer/: run_infer.py
ml_offline/models/: hist3d_net.py
ml_offline/schema/: README.md
ml_offline/train/: train.py
nezha/acquisition/: CMakeLists.txt  ExampleTOF.cpp  ExampleTOF_laser_master.cpp  laser_init.py  test_sys_master_py.py  verify_depth.py  verify_sync.py
nezha/algorithm/: inject_fog.py  sim_spad_loader.py
nezha/autostart/: README.md  tof-acquisition.service  tof-spi-syncer.service
nezha/qt_app/: cloudsyncer.cpp  datarecorder.cpp  depthparser.cpp  laser_verify.py  laseruart.cpp  laseruart.h  mainwindow.cpp  mainwindow.h  motoruart.cpp  motoruart.h  pointcloudwidget.cpp  tof_viewer.pro
nezha/spi_syncer/: Makefile  README.md  spi_syncer.c
qt_app/: cloudsyncer.h  datarecorder.h  depthparser.h  depthwidget.cpp  depthwidget.h  feedbackcontroller.cpp  feedbackcontroller.h  laseruart.h  main.cpp  motoruart.cpp  pointcloudwidget.h
refs/hardware/: AAEON_哪吒_用户手册_含pinout.md  ATK-DLRK3568_改版底板原理图_2026-05-29.md  README.md  YSC-SO-M04-4 脉冲激光驱动器（综合型）说明书.md
refs/papers/: joint_depth_reflectivity_SP_LiDAR_2025_中文整理.md
refs/pf32/samples/PhotonForce/C++/: CMakeLists.txt  Cooled.cpp  Correlator.cpp  DualCamera.cpp  Example.cpp  Examplewin.cpp  FW_Histogramming.cpp  Footer.cpp  Makefile  PF32_API.h  PF32_CORRELATOR_API.h  PF_types.h  Readme.txt  clean.sh  cmake_install.cmake  compile.sh  cut512  cut512.c  display_big.py  display_clear.py  display_clear_logicl.py  image.txt  run.cooled.sh  run.dual.sh  run.example.sh  run.fwHistogramming.sh  send_exec  synthesize1.sh  synthesize1017.sh  test.sh  test207final.sh  test207killprocess.sh  tsh_image.py
refs/pf32/samples/PhotonForce/原cmakelist/: CMakeLists.txt
refs/usb_spi/: README.md
research/: .gitignore  README.md  contracts.py  inject_fog.py  run_accumulation.py  run_benchmark.py  run_demo.py  run_pf32_prep_A.py  run_pf32_prep_A_depth_grid.py  run_pf32_prep_B.py  run_pf32_prep_B_new.py  run_reverse_parity.py  run_sanity.py  run_verify_baseline.py  sim_spad_loader.py  tof_process.py  tof_sim.py
research/algorithms/: __init__.py  argmax.py  bg_sub_argmax.py  gaussian_fit.py  lmf.py  poisson_mle.py  rl_deconv.py  tail_bg_argmax.py
research/eval/: __init__.py  metrics.py  viz.py
rk3568/: README.md
tof文献/: 02_2017.11-ScientificReports-南京大学-测量海况的演示雾采用基于SNSPD的激光雷达系统.md  05_2019.5-SSPD-赫瑞瓦特大学-多时空或多光谱的联合重建单曲-光子3D_激光雷达图像_translated.md  06_2020.11-SPIE会议论文-澳大利亚-利用统计混合模型减少雾霾环境SPAD图像中的噪声.md  08_2022.5-IEEE-赫瑞瓦特大学-多光谱的稳健贝叶斯重建单曲-光子非均匀背景的3D_LIDAR数据.md  12_Adaptive_Gating_for_Single-Photon_3D_Imaging.md  16_Impact_of_Multi-Scattered_LiDAR_Returns_in_Fog.md  18_Robust_real-time_3D_imaging_of_moving_scenes_through_atmospheric_obscurant_using_single-ph.md  22_Three-dimensional_single-photon_imaging.md  23_Towards_an_ultrafast_3D_imaging_scanning_LiDAR.md  27_通过直接飞行时间闪光激光雷达实现异步深度传感.md  tof_algorithm_literature_review_and_plan.md
(+192 files in other folders)
